
mailarch (1.7.0) ietf; urgency=normal

 * Changes to use realname in search results From column.
   Also expanded xapian_backend error messages.

 * Fixes #2143.  Present URLs in message body as links

-- Ryan Cross <rcross@amsl.com>  03 Mar 2017 12:00:00 +0800

mailarch (1.6.2) ietf; urgency=normal

 * Fixes #2189.  Fix issue with subject based threading.

 * Fixes #2163.  Add version to static file path.

 * Fixes #2190.  Add way to minimize message view pane

 * Fixes #2195.  When only one message in search results,
   clicking message detail link results in 500 error.

-- Ryan Cross <rcross@amsl.com>  15 Feb 2017 10:00:00 +0800

mailarch (1.6.1) ietf; urgency=normal

 * Resolve issue with archive 0007_populate_in_reply_to migration

 * Fixes #2157.  Error when missing parameters from message_external_body

 * Fixes #2181.  From the first message in a thread, Previous 
   in thread link should return first message of previous thread.

 * Fixes #2156.  Index out of range in find_message_gbt()

 * Fixes #2182.  Add new scan_all function, check_thread_order,
   to detect and fix discrepancies between DB and Xapian index thread_order.

 * Added virtualenv support

-- Ryan Cross <rcross@amsl.com>  02 Feb 2017 10:00:00 +0800

mailarch (1.6.0) ietf; urgency=normal

 * RFC7842 Sections:

 * 2.3 Navigation from message detail

 * 2.4 Message List UI improvements

 * 2.7 Support use without Javascript

 * 2.8 Administrative improvements

-- Ryan Cross <rcross@amsl.com>  09 Jan 2017 13:00:00 +0800

mailarch (1.5.1) ietf; urgency=high

 * Fix threading of multi-list messages. Includes migration 

-- Ryan Cross <rcross@amsl.com>  15 Dec 2016 13:00:00 +0800

mailarch (1.5.0) ietf; urgency=normal

 * Thread sorting and display improvements

-- Ryan Cross <rcross@amsl.com>  28 Nov 2016 16:30:00 +0800

mailarch (1.4.3) ietf; urgency=normal

 * Fix title in banner

 * Add version footer

-- Ryan Cross <rcross@amsl.com>  05 Oct 2016 16:30:00 +0800
